# OCloud

./: .gitignore  .seed.json  Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  tox.ini
.circleci/: config.yml
OCloud/: celery.py  schedulers.py  urls.py
OCloud/settings/: base.py  dev.py  prod.py
OCloud/tests/: test_celery.py  test_schedulers.py  test_views.py
backend/: .gitignore  Procfile  poetry.lock.old  pyproject.toml
backend/Application/: apps.py
backend/Application/migrations/: 0001_initial.py  0002_application.py
backend/Application/models/: Application.py  ApplicationPool.py  __init__.py
backend/AuthKey/: apps.py  urls.py
backend/AuthKey/migrations/: 0001_initial.py
backend/AuthKey/models/: PublicKey.py  __init__.py
backend/AuthKey/serializers/: PublicKeySerializer.py
backend/AuthKey/services/: PublicKeyService.py
backend/AuthKey/validators/tests/: validate_public_key_tests.py
backend/AuthKey/views/: PublicKeyController.py
backend/OCloud/: celery.py  urls.py  wsgi.py  wsgi.staging.py
backend/OCloud/settings/: base.py  dev.py  prod.py  staging.py
backend/PublicKey/: admin.py  apps.py  urls.py
backend/PublicKey/migrations/: 0001_initial.py
backend/PublicKey/models/: PublicKey.py  __init__.py
backend/PublicKey/permissions/: IsAdminOrOwner.py
backend/PublicKey/serializers/: PublicKeySerializer.py
backend/PublicKey/services/: PublicKeyService.py
backend/PublicKey/validators/: validate_public_key.py
backend/PublicKey/validators/tests/: validate_public_key_tests.py
backend/PublicKey/views/: PublicKeyController.py
backend/core/: admin.py  models.py
backend/core/migrations/: 0001_initial.py
backend/core/tests/: test_models.py
core/management/commands/: rundebugserver.py
core/migrations/: 0002_user_email_as_username.py  0003_longer_first_name.py
front/templates/: app.html
frontend/: .env.production  .env.staging  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: index.tsx  routes.tsx
frontend/src/common/components/: ErrorBox.tsx  TextInput.tsx
frontend/src/common/components/Inputs/: TextAreaInput.tsx  TextInput.tsx
frontend/src/common/components/Inputs/HOC/: withFormikInput.tsx
frontend/src/common/components/UI/: Button.ts
frontend/src/common/hooks/: useFetchOnMount.ts  useLoggedInOrRedirect.ts
frontend/src/components/Header/: Header.tsx
frontend/src/pages/Avatar/: Avatar.tsx
frontend/src/pages/Home/: Home.style.tsx  Home.tsx
frontend/src/pages/PublicKeys/: index.tsx
frontend/src/pages/PublicKeys/components/: PublicKeyCard.style.ts  PublicKeyCard.tsx  PublicKeyForm.tsx  PublicKeysList.style.ts  PublicKeysList.tsx
frontend/src/pages/PublicKeys/hooks/: useFetchPublicKeys.ts
frontend/src/pages/PublicKeys/services/: deletePublicKey.ts  fetchUserPublicKeys.ts  updatePublicKey.ts
frontend/src/pages/PublicKeys/types/: PublicKey.ts
frontend/src/redux/Avatar/: hooks.ts
frontend/src/redux/Login/: hooks.ts  selectors.ts  slice.ts
frontend/src/redux/Login/__tests__/: reducer.test.ts
frontend/src/services/networking/: client.ts  types.ts
