[tool.poetry]
name = "OCloud"
version = "0.0.1"
description = "A new Theodo project"
authors = ["Theodo <contact@theodo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
argon2-cffi = "^19.2.0"
asgiref = "^3.2.5"
boto3 = "^1.12.26"
dj-database-url = "^0.5.0"
django = "^3.1.2"
django-axes = "^5.4.1"
django-memoize = "^2.2.1"
django-storages = "^1.9.1"
djangorestframework = "^3.11.0"
djangorestframework_simplejwt = "^4.4.0"
djoser = "^2.0.3"
psycopg2-binary = "^2.8.4"
pytz = "^2019.3"
requests = "^2.23.0"
sentry-sdk = "^0.14.3"
sqlparse = "^0.3.1"
watchtower = "^0.7.3"
celery = {version = "^4.4.7", extras = ["sqs"]}
django-celery-beat = "^2.0.0"
django-celery-results = "^1.2.1"
django-cors-headers = "^3.5.0"
django-migration-linter = "^2.4.0"
django-add-default-value = "^0.5.0"
django-deprecate-fields = "^0.1.0"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"
flake8 = "^3.7.9"
factory-boy = "^2.12.0"
coverage = "^5.0.4"
django-debug-toolbar = "^2.2"
django-extensions = "^2.2.8"
isort = "^4.3.21"
black = "^19.10b0"
redis = "^3.5.3"
bandit = "^1.6.2"
safety = "^1.9.0"

[tool.black]
exclude = 'migrations'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
