[tool.poetry]
name = "OCloud"
version = "0.0.1"
description = "A new Theodo project"
authors = ["Theodo <contact@theodo.co.uk>"]

[tool.poetry.dependencies]
python = "3.9.6"
argon2-cffi = "^19.2.0"
asgiref = "^3.2.5"
boto3 = "^1.12.26"
dj-database-url = "^0.5.0"
django = "^3.1.2"
django-axes = "^5.4.1"
django-memoize = "^2.2.1"
django-storages = "^1.9.1"
djangorestframework = "^3.11.0"
djangorestframework_simplejwt = "^4.4.0"
djoser = "^2.0.3"
psycopg2-binary = "^2.8.4"
pytz = "^2019.3"
requests = "^2.23.0"
sentry-sdk = "^0.14.3"
sqlparse = "^0.3.1"
watchtower = "^0.7.3"
celery = {version = "^4.4.7", extras = ["sqs"]}
django-celery-beat = "^2.0.0"
django-celery-results = "^1.2.1"
django-cors-headers = "^3.5.0"
django-migration-linter = "^2.4.0"
django-add-default-value = "^0.5.0"
django-deprecate-fields = "^0.1.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-redis = "^5.0.0"
pycryptodome = "^3.10.1"
pycryptodomex = "^3.10.1"
djangorestframework-camel-case = "^1.2.0"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"
flake8 = "^3.7.9"
factory-boy = "^2.12.0"
coverage = "^5.0.4"
django-debug-toolbar = "^2.2"
django-extensions = "^2.2.8"
isort = "^4.3.21"
black = "^19.10b0"
redis = "^3.5.3"
bandit = "^1.6.2"
safety = "^1.9.0"
pylint = "^2.9.3"
mypy = "^0.910"
django-stubs = "^1.8.0"
djangorestframework-stubs = "^1.4.0"

[tool.black]
exclude = 'migrations'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
pretty = false
show_column_numbers = true
show_absolute_path = true
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[mypy.plugins.django-stubs]
django_settings_module = "OCloud.settings.dev"

[tool.isort]
# isort configuration:
# https://github.com/PyCQA/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
# See https://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 3
line_length = 80

[tool.pylint.messages_control]
disable = [
"missing-module-docstring",
"missing-class-docstring",
"useless-object-inheritance"]
